; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/rtree/extr_rtree.c_rtreeValueDown.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/rtree/extr_rtree.c_rtreeValueDown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RNDAWAY = common dso_local global double 0.000000e+00, align 8
@RNDTOWARDS = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32*)* @rtreeValueDown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @rtreeValueDown(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca float, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call double @sqlite3_value_double(i32* %5)
  store double %6, double* %3, align 8
  %7 = load double, double* %3, align 8
  %8 = fptrunc double %7 to float
  store float %8, float* %4, align 4
  %9 = load float, float* %4, align 4
  %10 = fpext float %9 to double
  %11 = load double, double* %3, align 8
  %12 = fcmp ogt double %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %1
  %14 = load double, double* %3, align 8
  %15 = load double, double* %3, align 8
  %16 = fcmp olt double %15, 0.000000e+00
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load double, double* @RNDAWAY, align 8
  br label %21

19:                                               ; preds = %13
  %20 = load double, double* @RNDTOWARDS, align 8
  br label %21

21:                                               ; preds = %19, %17
  %22 = phi double [ %18, %17 ], [ %20, %19 ]
  %23 = fmul double %14, %22
  %24 = fptrunc double %23 to float
  store float %24, float* %4, align 4
  br label %25

25:                                               ; preds = %21, %1
  %26 = load float, float* %4, align 4
  ret float %26
}

declare dso_local double @sqlite3_value_double(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
